# gr-xoroshiro

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: xoroshiroConfig.cmake
docs/: README.xoroshiro
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: Kolmogorov-Smirnov-Test.ipynb
grc/: CMakeLists.txt  xoroshiro_xoroshiro128p_source.xml
include/xoroshiro/: CMakeLists.txt  api.h  xoroshiro-variates.h  xoroshiro128p_source.h
lib/: CMakeLists.txt  qa_xoroshiro.cc  qa_xoroshiro.h  test_xoroshiro.cc  xoroshiro128p_source_impl.cc  xoroshiro128p_source_impl.h
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  xoroshiro_swig.i
